# GeofenceApp

./: .gitignore  README.md
.github/workflows/: main_attendance-logger.yml
attendance-tracker/backend/: azure-deploy.py  build.sh  config.py  pyproject.toml  render.yaml  sample_create_admin.py  sample_office_generator.py  startup.txt
attendance-tracker/backend/app/: config.py  main.py
attendance-tracker/backend/app/api/: admin.py  attendance.py  auth.py  offices.py
attendance-tracker/backend/app/core/: auth.py
attendance-tracker/backend/app/db/: base.py
attendance-tracker/backend/app/models/: models.py
attendance-tracker/backend/app/schemas/: schemas.py
attendance-tracker/frontend/: admin.html  index.html
attendance-tracker/frontend/css/: admin.css  styles.css
attendance-tracker/frontend/js/: app.js  auth.js  config.js  location.js
geofence-checker/: index.html  package-lock.json  package.json
geofence-checker/src/: app.js
geofence-checker/src/models/: Location.js
geofence-checker/src/services/: GeofenceService.js  LocationService.js
geofencing-api/: package-lock.json  pyproject.toml
geofencing-api/app/: config.py  logging_config.py  main.py
geofencing-api/app/api/endpoints/: buildings.py  geofence.py
geofencing-api/app/models/: building.py  geofence.py  location.py
geofencing-api/app/services/: building_storage.py  geofence_service.py  osm_service.py
geofencing-api/app/utils/: distance_calculator.py
geofencing-ui/: package-lock.json  package.json
geofencing-ui/src/: App.css  App.js  config.js  index.css
(+16 files in other folders)
