[project]
name = "geofencing-api"
version = "0.1.0"
description = "A geofencing API to detect if users are near buildings"
authors = [
    {name = "Debshishu Ghosh",email = "debghosh0506@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "geopy (>=2.4.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "geofencing_api", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
